Leaflet still writing

--- a/src/Terratype.LeafletV1/App_Plugins/Terratype.LeafletV1/Views/config.definition.html
+++ b/src/Terratype.LeafletV1/App_Plugins/Terratype.LeafletV1/Views/config.definition.html
@@ -3,6 +3,31 @@
         .terratype .icon-delete:hover, .terratype .icon-add:hover {
             color: #b94a48;
         }
+        .terratype .error .header {
+            color: red;
+        }
+        .terratype .terratype-caret-close {
+            display:inline-block;
+            width: 0;
+            height: 0;
+            border-bottom: 4px solid transparent;
+            border-top: 4px solid transparent;
+            border-left: 4px solid #ddd;
+            margin-top: 6px;
+        }
+        .terratype .terratype-caret-open {
+            display: inline-block;
+            width: 0;
+            height: 0;
+            vertical-align: top;
+            border-top: 4px solid #000;
+            border-right: 4px solid transparent;
+            border-left: 4px solid transparent;
+            margin-top:6px;
+        }
+        .terratype .terratype-header:hover .terratype-caret-close {
+            border-left-color: #b94a48 !important;
+        }
     </style>
 
     <div class="umb-el-wrap control-group">
@@ -13,12 +38,12 @@
                 <localize key="terratypeLeafletV1ConfigDefinition_mapSourceAdd">Add a Map Source</localize>
             </label>
         </div>
-        <div ng-repeat="l in store().provider.mapSources track by $index" style="border-bottom:1px dashed #dddddd;margin-bottom:5px;">
+        <div ng-repeat="l in store().provider.mapSources track by $index" style="border-bottom:1px dashed #dddddd;margin-bottom:5px;" ng-class="{'error': !vm().provider.events.mapSourceValid(l)}">
             <div>
-                <div ng-click="vm().provider.events.mapSourceToggleRow($index)" style="min-width:180px;height:30px;float:left;cursor:pointer">
-                    <div class="caret">
+                <div class="terratype-header" ng-click="vm().provider.events.mapSourceToggleRow($index)" style="min-width:180px;height:30px;float:left;cursor:pointer;">
+                    <div ng-class="(vm().provider.mapSources[$index].show) ? 'terratype-caret-open' : 'terratype-caret-close'">
                     </div>
-                    <span ng-style="{'color' : (l.mapSource.id && l.tileServer.id && l.minZoom && l.maxZoom && vm().provider.events.tileServerByCoordinateSystemAndId[store().position.id + '.' + l.tileServer.id] == true && l.minZoom >= vm().provider.events.tileServerById[l.tileServer.id].minZoom && l.minZoom <= l.maxZoom && l.maxZoom <= vm().provider.events.tileServerById[l.tileServer.id].maxZoom) ? 'auto' : 'red'}">
+                    <span class="header">
                         {{l.minZoom}}-{{l.maxZoom}} {{vm().provider.events.mapSourceById[l.mapSource.id].name}} {{vm().provider.events.tileServerById[l.tileServer.id].name}}
                     </span>
                 </div>
@@ -27,7 +52,7 @@
                 </div>
                 <div style="clear:both"></div>
             </div>
-            <div id="terratype_{{identifier}}_leafletv1_mapSources_{{$index}}" style="margin-left:10px;">
+            <div class="terratype-content" id="terratype_{{identifier}}_leafletv1_mapSources_{{$index}}" ng-show="vm().provider.mapSources[$index].show" style="margin-left:10px;">
                 <div class="umb-el-wrap control-group">
                     <label for="terratype_{{identifier}}_leafletv1_mapSource_{{$index}}" class="control-label">
                         <localize key="terratypeLeafletV1ConfigDefinition_mapSourceLabel">Map Source:</localize>
@@ -51,7 +76,7 @@
                         </small>
                     </label>
                     <div class="controls">
-                        <select id="terratype_{{identifier}}_leafletv1_tileServer_{{$index}}" ng-model="store().provider.mapSources[$index].tileServer.id" class="umb-editor" ng-options="p.id as p.name for p in vm().provider.events.tileServerByCoordinateSystemAndMapSource[store().position.id][l.mapSource.id] | orderBy: 'p.name'"></select>
+                        <select id="terratype_{{identifier}}_leafletv1_tileServer_{{$index}}" ng-model="store().provider.mapSources[$index].tileServer.id" class="umb-editor" ng-options="p.id as p.name for p in vm().provider.events.tileServerByCoordinateSystemAndMapSource[store().position.id][l.mapSource.id] | orderBy: 'p.name'" ng-change="vm().provider.events.mapSourceMinZoomBind(null, $index);vm().provider.events.mapSourceMaxZoomBind(null, $index);vm().provider.events.mapSourceTestImageBind(vm().provider.events.tileServerById[l.tileServer.id].minZoom, $index)"></select>
                         <div ng-show="l.tileServer.id && !vm().provider.events.tileServerByCoordinateSystemAndId[store().position.id + '.' + l.tileServer.id]">
                             <small style="color:red;">
                                 <localize key="terratypeLeafletV1ConfigDefinition_tileServerInvalidCoordinateSystem"></localize>
@@ -73,40 +98,71 @@
                         </div>
                     </div>
                 </div>
-                <div class="umb-el-wrap control-group">
-                    <label for="terratype_{{identifier}}_leafletv1_minZoom_{{l}}" class="control-label">
-                        <localize key="terratypeLeafletV1ConfigDefinition_minZoomLabel">Min Zoom:</localize>
-                        <small>
-                            <localize key="terratypeLeafletV1ConfigDefinition_minZoomDescription">Minimum zoom</localize>
-                        </small>
-                    </label>
-                    <div class="controls">
-                        <input type="number" id="terratype_{{identifier}}_leafletv1_minZoom_{{l}}" ng-model="store().provider.mapSources[$index].minZoom" class="umb-editor" min="{{vm().provider.events.tileServerById[l.tileServer.id].minZoom}}" max="{{vm().provider.events.tileServerById[l.tileServer.id].maxZoom}}" />
-                        <div ng-show="l.minZoom && (l.minZoom < vm().provider.events.tileServerById[l.tileServer.id].minZoom || l.minZoom > vm().provider.events.tileServerById[l.tileServer.id].maxZoom)">
-                            <small style="color:red;">
-                                <span terratype-translate="terratypeLeafletV1ConfigDefinition_minZoomError"></span>
+                <div ng-show="store().provider.mapSources[$index].tileServer.id">
+                    <div class="umb-el-wrap control-group">
+                        <label for="terratype_{{identifier}}_leafletv1_minZoom_{{$index}}" class="control-label">
+                            <localize key="terratypeLeafletV1ConfigDefinition_minZoomLabel">Min Zoom:</localize>
+                            <small>
+                                <localize key="terratypeLeafletV1ConfigDefinition_minZoomDescription">Minimum zoom</localize>
                             </small>
+                        </label>
+                        <div class="controls">
+                            <div>
+                                <input type="range" ng-model="vm().provider.mapSources[$index].minZoom" id="terratype_{{identifier}}_leafletv1_minZoom_{{$index}}" min="{{vm().provider.events.tileServerById[l.tileServer.id].minZoom}}" max="{{vm().provider.events.tileServerById[l.tileServer.id].maxZoom}}" style="float:left;" ng-change="vm().provider.events.mapSourceMinZoomBind(vm().provider.mapSources[$index].minZoom, $index);" ng-mousemove="vm().provider.events.mapSourceMinZoomBindIE('terratype_' + identifier + '_leafletv1_minZoom_' + $index, $index);">
+                                <div style="width:3em;float:left;margin-left:5px;">
+                                    <input type="number" ng-model="store().provider.mapSources[$index].minZoom" class="umb-editor" style="width:3em;" maxlength="2" ng-change="vm().provider.events.mapSourceMinZoomBind(store().provider.mapSources[$index].minZoom, $index);" />
+                                </div>
+                                <div style="clear:both;"></div>
+                            </div>
+                            <div ng-show="l.minZoom && (l.minZoom < vm().provider.events.tileServerById[l.tileServer.id].minZoom || l.minZoom > vm().provider.events.tileServerById[l.tileServer.id].maxZoom)">
+                                <small style="color:red;">
+                                    <span terratype-translate="terratypeLeafletV1ConfigDefinition_minZoomError"></span>
+                                </small>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="umb-el-wrap control-group">
+                        <label for="terratype_{{identifier}}_leafletv1_maxZoom_{{$index}}" class="control-label">
+                            <localize key="terratypeLeafletV1ConfigDefinition_maxZoomLabel">Max Zoom:</localize>
+                            <small>
+                                <localize key="terratypeLeafletV1ConfigDefinition_maxZoomDescription">Maximum zoom</localize>
+                            </small>
+                        </label>
+                        <div class="controls">
+                            <div>
+                                <input type="range" ng-model="vm().provider.mapSources[$index].maxZoom" id="terratype_{{identifier}}_leafletv1_maxZoom_{{$index}}" min="{{vm().provider.events.tileServerById[l.tileServer.id].minZoom}}" max="{{vm().provider.events.tileServerById[l.tileServer.id].maxZoom}}" style="float:left;" ng-change="vm().provider.events.mapSourceMaxZoomBind(vm().provider.mapSources[$index].maxZoom, $index);" ng-mousemove="vm().provider.events.mapSourceMaxZoomBindIE('terratype_' + identifier + '_leafletv1_maxZoom_' + $index, $index);">
+                                <div style="width:3em;float:left;margin-left:5px;">
+                                    <input type="number" ng-model="store().provider.mapSources[$index].maxZoom" class="umb-editor" style="width:3em;" maxlength="2" ng-change="vm().provider.events.mapSourceMaxZoomBind(store().provider.mapSources[$index].maxZoom, $index);" />
+                                </div>
+                                <div style="clear:both;"></div>
+                            </div>
+                            <div ng-show="l.maxZoom && (l.maxZoom < vm().provider.events.tileServerById[l.tileServer.id].minZoom || l.maxZoom > vm().provider.events.tileServerById[l.tileServer.id].maxZoom)">
+                                <small style="color:red;">
+                                    <span terratype-translate="terratypeLeafletV1ConfigDefinition_maxZoomError"></span>
+                                </small>
+                            </div>
+                            <div ng-show="l.maxZoom < l.minZoom">
+                                <small style="color:red;">
+                                    <localize key="terratypeLeafletV1ConfigDefinition_maxZoomInvalid"></localize>
+                                </small>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="umb-el-wrap control-group">
-                    <label for="terratype_{{identifier}}_leafletv1_maxZoom_{{l}}" class="control-label">
-                        <localize key="terratypeLeafletV1ConfigDefinition_maxZoomLabel">Max Zoom:</localize>
+                <div class="umb-el-wrap control-group" ng-if="vm().provider.events.mapSourceValid(l)">
+                    <label for="terratype_{{identifier}}_leafletv1_imagetest_{{$index}}" class="control-label">
+                        <localize key="terratypeLeafletV1ConfigDefinition_imagetestLabel">Image Test:</localize>
                         <small>
-                            <localize key="terratypeLeafletV1ConfigDefinition_maxZoomDescription">Maximum zoom</localize>
+                            <localize key="terratypeLeafletV1ConfigDefinition_imageDescription">Why image test</localize>
                         </small>
                     </label>
                     <div class="controls">
-                        <input type="number" id="terratype_{{identifier}}_leafletv1_maxZoom_{{l}}" ng-model="store().provider.mapSources[$index].maxZoom" class="umb-editor" min="{{vm().provider.events.tileServerById[l.tileServer.id].minZoom}}" max="{{vm().provider.events.tileServerById[l.tileServer.id].maxZoom}}" />
-                        <div ng-show="l.maxZoom && (l.maxZoom < vm().provider.events.tileServerById[l.tileServer.id].minZoom || l.maxZoom > vm().provider.events.tileServerById[l.tileServer.id].maxZoom)">
-                            <small style="color:red;">
-                                <span terratype-translate="terratypeLeafletV1ConfigDefinition_maxZoomError"></span>
-                            </small>
+                        <div>
+                            <img ng-src="{{vm().provider.events.mapSourceImageTest($index)}}" style="width:256px;height:256px;" />
                         </div>
-                        <div ng-show="l.maxZoom < l.minZoom">
-                            <small style="color:red;">
-                                <localize key="terratypeLeafletV1ConfigDefinition_maxZoomInvalid"></localize>
-                            </small>
+                        <div style="margin-top:5px;">
+                            <input type="range" ng-model="vm().provider.mapSources[$index].testImageRange" id="terratype_{{identifier}}_leafletv1_imagetest_{{$index}}" min="{{store().provider.mapSources[$index].minZoom}}" max="{{store().provider.mapSources[$index].maxZoom}}" ng-change="vm().provider.events.mapSourceTestImageBind(vm().provider.mapSources[$index].testImageRange, $index)" ng-mousemove="vm().provider.events.mapSourceTestImageBindIE('terratype_' + identifier + '_leafletv1_imagetest_' + $index, $index);">
+                            <input type="number" ng-model="vm().provider.mapSources[$index].testImageNumber" style="width:3em;" maxlength="2" ng-change="vm().provider.events.mapSourceTestImageBind(vm().provider.mapSources[$index].testImageNumber, $index)">
                         </div>
                     </div>
                 </div>
