--- a/src/Terratype.LeafletV1/App_Plugins/Terratype.LeafletV1/Views/editor.apperance.html
+++ b/src/Terratype.LeafletV1/App_Plugins/Terratype.LeafletV1/Views/editor.apperance.html
@@ -12,7 +12,7 @@
         </div>
         <div style="margin-top:-15px;">
             <div>
-                <input type="text" id="terratype_{{identifier}}_googlemapv3_location" class="umb-editor umb-textstring textstring" localize="placeholder" placeholder="@terratypeGoogleMapsV3EditorApperance_locationPlaceholder" ng-model="vm().position.datumText" ng-change="vm().provider.events.datumChange(vm().position.datumText)" ng-style="vm().position.datumStyle" />
+                <input type="text" id="terratype_{{identifier}}_leafletv1_location" class="umb-editor umb-textstring textstring" localize="placeholder" placeholder="@terratypeLeafletV1EditorApperance_locationPlaceholder" ng-model="vm().position.datumText" ng-change="vm().provider.events.datumChange(vm().position.datumText)" ng-style="vm().position.datumStyle" />
             </div>
         </div>
     </div>
