--- a/src/Terratype.TestSite/App_Plugins/Terratype.LeafletV1/Views/grid.apperance.html
+++ b/src/Terratype.TestSite/App_Plugins/Terratype.LeafletV1/Views/grid.apperance.html
@@ -1,6 +1,4 @@
 ﻿<div style="overflow:hidden;">
-    <style ng-bind-html="'#terratype_' + identifier + '_leafletv1_map {height:' + config().height + 'px;}'">
-    </style>
-    <div id="terratype_{{identifier}}_leafletv1_map" ng-show="vm().showMap">
+    <div id="terratype_{{identifier}}_leafletv1_map" ng-show="vm().showMap" style="height:{{config().height}}px;">
     </div>
 </div>
