--- a/src/Terratype.TestSite/Views/Single1.cshtml
+++ b/src/Terratype.TestSite/Views/Single1.cshtml
@@ -15,76 +15,75 @@
 
 }
 
-Jquery is @jquery
+<html>
+<head>
+    <title>@Model.Content.Name</title>
+</head>
+</html>
+<body>
+    @Html.Terratype(Model.Content.Map)
+
+    Jquery is @jquery
 
 
+    <fieldset>
+        <legend>
+            Map 1
+        </legend>
+        <dl>
+            <dt>
+                Zoom
+            </dt>
+            <dd>
+                @Model.Content.Map.Zoom
+            </dd>
+            <dt>
+                Lookup
+            </dt>
+            <dd>
+                @Model.Content.Map.Lookup
+            </dd>
+            <dt>
+                Position
+            </dt>
+            <dd>
+                @Model.Content.Map.Position
+            </dd>
+            <dt>
+                Coordinate System
+            </dt>
+            <dd>
+                @Model.Content.Map.Position.Id
+            </dd>
+            <dt>
+                Provider
+            </dt>
+            <dd>
+                @Model.Content.Map.Provider.Id
+            </dd>
+            <dt>
+                Icon Url
+            </dt>
+            <dd>
+                @Model.Content.Map.Icon.Url
+            </dd>
+            <dt>
+                Api Key
+            </dt>
+            <dd>
+                @((Model.Content.Map.Provider as Terratype.Providers.GoogleMapsV3).ApiKey)
+            </dd>
 
-
-<fieldset>
-    <legend>
-        Map 1
-    </legend>
-    <dl>
-        <dt>
-            Zoom
-        </dt>
-        <dd>
-            @Model.Content.Map.Zoom
-        </dd>
-        <dt>
-            Lookup
-        </dt>
-        <dd>
-            @Model.Content.Map.Lookup
-        </dd>
-
-        <dt>
-            Position
-        </dt>
-        <dd>
-            @Model.Content.Map.Position
-        </dd>
-
-        <dt>
-            Coordinate System
-        </dt>
-        <dd>
-            @Model.Content.Map.Position.Id
-        </dd>
-
-        <dt>
-            Provider
-        </dt>
-        <dd>
-            @Model.Content.Map.Provider.Id
-        </dd>
-        <dt>
-            Icon Url
-        </dt>
-        <dd>
-            @Model.Content.Map.Icon.Url
-        </dd>
-
-        <dt>
-            Api Key
-        </dt>
-        <dd>
-            @((Model.Content.Map.Provider as Terratype.Providers.GoogleMapsV3).ApiKey)
-        </dd>
-
-
-    </dl>
-
-    <div id="pretend-accordion" style="display:@(Request.QueryString["show"] != null ? "display" : "none");">
-        <div style="height:1000px;background-color:antiquewhite;text-align:center;vertical-align:central;">
-            This is an empty div
+        </dl>
+        <div id="pretend-accordion" style="display:@(Request.QueryString["show"] != null ? "display" : "none");">
+            <div style="height:1000px;background-color:antiquewhite;text-align:center;vertical-align:central;">
+                This is an empty div
+            </div>
+            @Html.Terratype(Model.Content.Map)
+            <div style="height:1000px;background-color:antiquewhite;text-align:center;vertical-align:central;">
+                This is an empty div
+            </div>
         </div>
-        @Html.Terratype(Model.Content.Map)
-        <div style="height:1000px;background-color:antiquewhite;text-align:center;vertical-align:central;">
-            This is an empty div
-        </div>
-    </div>
-
-    <button onclick="var a = document.getElementById('pretend-accordion');a.style.display = (a.style.display=='none') ? 'block':'none'">Show/Hide Map</button>
-
-</fieldset>
+        <button onclick="var a = document.getElementById('pretend-accordion');a.style.display = (a.style.display=='none') ? 'block':'none'">Show/Hide Map</button>
+    </fieldset>
+</body>
