Razor now handles dynamics (Model, IPublishedProperty or string)

--- a/src/Terratype.TestSite/Views/Single1.cshtml
+++ b/src/Terratype.TestSite/Views/Single1.cshtml
@@ -17,9 +17,8 @@
 
 <html>
 <head>
-    <title>@Model.Content.Name</title>
+    <title>Strongly Typed</title>
 </head>
-</html>
 <body>
     @Html.Terratype(Model.Content.Map)
 
@@ -87,3 +86,4 @@
         <button onclick="var a = document.getElementById('pretend-accordion');a.style.display = (a.style.display=='none') ? 'block':'none'">Show/Hide Map</button>
     </fieldset>
 </body>
+</html>
