--- a/src/Terratype.TestSite/Views/Single2.cshtml
+++ b/src/Terratype.TestSite/Views/Single2.cshtml
@@ -1,5 +1,4 @@
-﻿@inherits Umbraco.Web.Mvc.UmbracoTemplatePage<ContentModels.Single2>
-@using ContentModels = Umbraco.Web.PublishedContentModels;
+﻿@inherits Umbraco.Web.Mvc.UmbracoTemplatePage
 @using Terratype;
 @{
     Layout = null;
@@ -15,76 +14,55 @@
 
 }
 
-Jquery is @jquery
+<html>
+<head>
+    <title>Dynamic</title>
+</head>
+<body>
+
+    @Html.Terratype(Model.Content.GetProperty("map"))
+
+    <br />
+
+    @Html.Terratype(Model.Content.GetProperty("map"), @<text>This is the label</text>)
+
+    <br />
+
+    @Html.Terratype(Model.Content.GetProperty("map").Value)
+
+    <br />
+
+    @Html.Terratype(Model.Content.GetProperty("map").Value, @<text>This is the label</text>)
+
+    <br />
+
+
+    @Html.Terratype("map")
+
+    <br />
+
+    @Html.Terratype("map", @<text>This is the label</text>)
+
+    <br />
+
+
+    @Html.Terratype(new Options
+    {
+        Provider = new Terratype.Providers.GoogleMapsV3()
+        {
+            Variety = new Terratype.Providers.GoogleMapsV3.VarietyDefinition()
+            {
+                Satellite = true
+            }
+        },
+        Zoom = 3,
+        Position = new Terratype.CoordinateSystems.Wgs84("50,0")
+    }, "map")
 
 
 
 
-<fieldset>
-    <legend>
-        Map 1
-    </legend>
-    <dl>
-        <dt>
-            Zoom
-        </dt>
-        <dd>
-            @Model.Content.Map.Zoom
-        </dd>
-        <dt>
-            Lookup
-        </dt>
-        <dd>
-            @Model.Content.Map.Lookup
-        </dd>
-
-        <dt>
-            Position
-        </dt>
-        <dd>
-            @Model.Content.Map.Position
-        </dd>
-
-        <dt>
-            Coordinate System
-        </dt>
-        <dd>
-            @Model.Content.Map.Position.Id
-        </dd>
-
-        <dt>
-            Provider
-        </dt>
-        <dd>
-            @Model.Content.Map.Provider.Id
-        </dd>
-        <dt>
-            Icon Url
-        </dt>
-        <dd>
-            @Model.Content.Map.Icon.Url
-        </dd>
-
-        <dt>
-            Api Key
-        </dt>
-        <dd>
-            @((Model.Content.Map.Provider as Terratype.Providers.GoogleMapsV3).ApiKey)
-        </dd>
 
 
-    </dl>
-
-    <div id="pretend-accordion" style="display:@(Request.QueryString["show"] != null ? "display" : "none");">
-        <div style="height:1000px;background-color:antiquewhite;text-align:center;vertical-align:central;">
-            This is an empty div
-        </div>
-        @Html.Terratype(Model.Content.Map)
-        <div style="height:1000px;background-color:antiquewhite;text-align:center;vertical-align:central;">
-            This is an empty div
-        </div>
-    </div>
-
-    <button onclick="var a = document.getElementById('pretend-accordion');a.style.display = (a.style.display=='none') ? 'block':'none'">Show/Hide Map</button>
-
-</fieldset>
+</body>
+</html>
