--- a/src/Terratype.TestSite/Views/Single4.cshtml
+++ b/src/Terratype.TestSite/Views/Single4.cshtml
@@ -1,5 +1,86 @@
-﻿@inherits Umbraco.Web.Mvc.UmbracoTemplatePage<ContentModels.Single4>
-@using ContentModels = Umbraco.Web.PublishedContentModels;
-@{
-	Layout = null;
-}
+﻿@inherits Umbraco.Web.Mvc.UmbracoTemplatePage<Umbraco.Web.PublishedContentModels.Single4>
+    @using Terratype;
+    @{
+    Layout = null;
+    var jquery = false;
+    if (Request.QueryString["jquery"] != null)
+    {
+    //  Add jquery to page, this will be picked up by Terratype and used instead of native js
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"
+            integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+            crossorigin="anonymous"></script>
+    jquery = true;
+    }
+
+    }
+
+    <html>
+    <head>
+        <title>Strongly Typed</title>
+    </head>
+    <body>
+        Jquery is @jquery
+
+
+        <fieldset>
+            <legend>
+                Map 1
+            </legend>
+            <dl>
+                <dt>
+                    Zoom
+                </dt>
+                <dd>
+                    @Model.Content.Map4.Zoom
+                </dd>
+                <dt>
+                    Lookup
+                </dt>
+                <dd>
+                    @Model.Content.Map4.Lookup
+                </dd>
+                <dt>
+                    Position
+                </dt>
+                <dd>
+                    @Model.Content.Map4.Position
+                </dd>
+                <dt>
+                    Coordinate System
+                </dt>
+                <dd>
+                    @Model.Content.Map4.Position.Id
+                </dd>
+                <dt>
+                    Provider
+                </dt>
+                <dd>
+                    @Model.Content.Map4.Provider.Id
+                </dd>
+                <dt>
+                    Icon Url
+                </dt>
+                <dd>
+                    @Model.Content.Map4.Icon.Url
+                </dd>
+                <dt>
+                    Map Sources
+                </dt>
+                <dd>
+                    @(Newtonsoft.Json.JsonConvert.SerializeObject((Model.Content.Map4.Provider as Terratype.Providers.LeafletV1).MapSources))
+                </dd>
+
+            </dl>
+            <div id="pretend-accordion" style="display:@(Request.QueryString[" show"] !=null ? "display" : "none" );">
+                <div style="height:1000px;background-color:antiquewhite;text-align:center;vertical-align:central;">
+                    This is an empty div
+                </div>
+                @Html.Terratype(Model.Content.Map4)
+                <div style="height:1000px;background-color:antiquewhite;text-align:center;vertical-align:central;">
+                    This is an empty div
+                </div>
+            </div>
+            <button onclick="var a = document.getElementById('pretend-accordion');a.style.display = (a.style.display=='none') ? 'block':'none'">Show/Hide Map</button>
+        </fieldset>
+    </body>
+</html>
